; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/miniupnpc/extr_minixml.c_parsexml.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/miniupnpc/extr_minixml.c_parsexml.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xmlparser = type { i64, i64, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @parsexml(%struct.xmlparser* %0) #0 {
  %2 = alloca %struct.xmlparser*, align 8
  store %struct.xmlparser* %0, %struct.xmlparser** %2, align 8
  %3 = load %struct.xmlparser*, %struct.xmlparser** %2, align 8
  %4 = getelementptr inbounds %struct.xmlparser, %struct.xmlparser* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = load %struct.xmlparser*, %struct.xmlparser** %2, align 8
  %7 = getelementptr inbounds %struct.xmlparser, %struct.xmlparser* %6, i32 0, i32 3
  store i64 %5, i64* %7, align 8
  %8 = load %struct.xmlparser*, %struct.xmlparser** %2, align 8
  %9 = getelementptr inbounds %struct.xmlparser, %struct.xmlparser* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = load %struct.xmlparser*, %struct.xmlparser** %2, align 8
  %12 = getelementptr inbounds %struct.xmlparser, %struct.xmlparser* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = add nsw i64 %10, %13
  %15 = load %struct.xmlparser*, %struct.xmlparser** %2, align 8
  %16 = getelementptr inbounds %struct.xmlparser, %struct.xmlparser* %15, i32 0, i32 2
  store i64 %14, i64* %16, align 8
  %17 = load %struct.xmlparser*, %struct.xmlparser** %2, align 8
  %18 = call i32 @parseelt(%struct.xmlparser* %17)
  ret void
}

declare dso_local i32 @parseelt(%struct.xmlparser*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
